Componente para as vantagens aws concluído e comentados

--- a/desafioUpMedal/store/blocks/about.jsonc
+++ b/desafioUpMedal/store/blocks/about.jsonc
@@ -2,15 +2,16 @@
     // Implementando componentes para página Sobre
     "store.custom#about": {
         "blocks": [
-            "info-card#topo",
-            "info-card#meio",
+            "info-card#topo", 
+            "rich-text#vantagens",
+            "flex-layout.row#vantagens",
             "rich-text#slider",
             "slider-layout#parceiros",
             "info-card#final"
             
         ]
     },
-    // 3 infocards descritivos sobre aws
+    // 2 infocards descritivos sobre aws
     "info-card#topo": {
         "props": {
             "id": "info-card-aws-topo",
@@ -23,21 +24,7 @@
             "blockClass": "info-card-aws-topo",
             "textAlignment": "center"
         }
-    },
-    "info-card#meio": {
-        "props": {
-            "id": "info-card-aws-meio",
-            "isFullModeStyle": true,
-            "textPosition": "center",
-            "imageUrl": "https://cdn.discordapp.com/attachments/879845756310282330/880473020412620840/bg1.png",
-            "headline": "Comece a criar com a AWS ainda hoje",
-            "subhead": "Por acaso você está buscando potência computacional, armazenamento de banco de dados, entrega de conteúdo ou outras funcionalidades? A AWS tem os serviços para ajudar a acriar aplicações sofisticadas com mais flexibilidade, escalabilidade e confiabilidade",
-            "callToActionText": "Comece a usar gratuitamente",
-            "callToActionUrl": "/sale/d",
-            "blockClass": "info-card-aws-meio",
-            "textAlignment": "center"
-        }
-    },
+    },    
     "info-card#final": {
         "props": {
             "id": "info-card-aws-final",
@@ -51,6 +38,127 @@
             "blockClass": "info-card-aws-final",
             "textAlignment": "center"
         }
+    },
+    // Título do fileira vantagens
+    "rich-text#vantagens":{
+      "props": {
+        "textAlignment": "CENTER",
+        "textPosition": "CENTER",
+        "text":"Vantagens de usar a AWS",
+        "font": "t-heading-3",
+        "blockClass": "title-vantagens"
+      }  
+    },
+    // Implementando a fileira das vantagens aws
+    "flex-layout.row#vantagens": {
+      "children": [
+        
+        "flex-layout.col#vantagens1",
+        "flex-layout.col#vantagens2",
+        "flex-layout.col#vantagens3",
+        "flex-layout.col#vantagens4"
+      ],
+      "props": {
+        "horizontalAlign":"CENTER",
+        "verticalAlign":"CENTER",
+        "blockClass": "vantagens",
+        "preventVerticalStretch": true,
+        "preventHorizontalStretch": true,
+        "fullWidth":true
+      }
+    },
+    //Configurandos as colunas e os conteudos respectivos
+    "flex-layout.col#vantagens1": {
+      "props":{
+        "blockClass": "vantagens"
+      },
+      "children": [
+        "image#vantagens1",
+        "rich-text#vantagens1"
+      ]
+    },
+    "image#vantagens1": {
+      "props": {
+        "src": "https://d1.awsstatic.com/What%20is%20AWS/WIAWS_Video-Placeholder_Functionality_350.2ec51f816912d9cbe9b0d615a15c9a0f64c7328d.png",
+        "maxHeight": "180px"
+      }
+    },
+    "rich-text#vantagens1": {
+      "props": {
+        "textAlignment": "CENTER",
+        "textPosition": "CENTER",
+        "text": "#### **A maior funcionalidade de recursos**\n A AWS oferece uma quantidade consideravelmente maior de serviços – e mais recursos com esses serviços – do que qualquer outro provedor de nuvem.",
+        "blockClass": "vantagens"
+      }
+    },
+    "flex-layout.col#vantagens2": {
+      "props":{
+        "blockClass": "vantagens"
+      },
+      "children": [
+        "image#vantagens2",
+        "rich-text#vantagens2"
+      ]
+    },
+    "image#vantagens2": {
+      "props": {
+        "src": "https://d1.awsstatic.com/what-is-aws/WIAWS_Video-Placeholder_Community_350-N.ccec4fa0d79e7ab09b0fc708cfb908a098138a51.png",
+        "maxHeight": "180px"
+      }
+    },
+    "rich-text#vantagens2": {
+      "props": {
+        "textAlignment": "CENTER",
+        "textPosition": "CENTER",
+        "text": "#### **A maior comunidade de clientes e parceiros**\n A AWS tem a maior e mais dinâmica comunidade, com milhões de clientes ativos e dezenas de milhares de parceiros no mundo todo.",
+        "blockClass": "vantagens"
+      }
+    },
+    "flex-layout.col#vantagens3": {
+      "props":{
+        "blockClass": "vantagens"
+      },
+      "children": [
+        "image#vantagens3",
+        "rich-text#vantagens3"
+      ]
+    },
+    "image#vantagens3": {
+      "props": {
+        "src": "https://d1.awsstatic.com/what-is-aws/WICC_Video-Placeholder_Rapid_350-N.b48c88da3d1e3dc5d8ffb0101f85ad18bf08855e.png",
+        "maxHeight": "180px"
+      }
+    },
+    "rich-text#vantagens3": {
+      "props": {
+        "textAlignment": "CENTER",
+        "textPosition": "CENTER",
+        "text": "#### **O ritmo de inovação acelerado**\nA AWS inova a um ritmo cada vez mais acelerado para criar tecnologias completamente novas que você pode usar para transformar seus negócios.",
+        "blockClass": "vantagens"
+      }
+    },
+    "flex-layout.col#vantagens4": {
+      "props":{
+        "blockClass": "vantagens"
+      },
+      "children": [
+        "image#vantagens4",
+        "rich-text#vantagens4"
+      ]
+    },
+    "image#vantagens4": {
+      "props": {
+        "src": "https://d1.awsstatic.com/what-is-aws/WIAWS_Video-Placeholder_Operational_350.2d63a0789c30baf43b2238743dfd425fcbb09b05.png",
+        "maxHeight": "180px"
+      }
+    },
+    "rich-text#vantagens4": {
+      "props": {
+        "textAlignment": "CENTER",
+        "textPosition": "CENTER",
+        "text": "#### **O conhecimento operacional AWS**\nA AWS tem experiência, maturidade, confiabilidade, segurança e performance incomparáveis, e a mais longa experiência operacional e em maior escala do mundo. ",
+        "blockClass": "vantagens"
+      }
     },
     //Implementando um titulo para o slider
     "rich-text#slider":{
@@ -99,8 +207,7 @@
           "link":{
             "url":"https://aws.amazon.com/solutions/case-studies/finra/",
             "noFollow": false,
-            "openNewTab": true,
-            "title": "Saiba mais"
+            "openNewTab": true
           }
         }
     },
@@ -112,8 +219,7 @@
           "link":{
             "url":"https://aws.amazon.com/solutions/case-studies/Intuit/?pg=CRHuB",
             "noFollow": false,
-            "openNewTab": true,
-            "title": "Saiba mais"
+            "openNewTab": true
         }
       }
     },  
@@ -125,8 +231,7 @@
           "link":{
             "url":"https://aws.amazon.com/solutions/case-studies/capital-one-enterprise/",
             "noFollow": false,
-            "openNewTab": true,
-            "title": "Saiba mais"
+            "openNewTab": true
         }
       }
     },
@@ -138,8 +243,7 @@
           "link":{
             "url":"https://aws.amazon.com/machine-learning/customers/innovators/coinbase/",
             "noFollow": false,
-            "openNewTab": true,
-            "title": "Saiba mais"
+            "openNewTab": true
         }
       }
     },
@@ -151,8 +255,7 @@
           "link":{
             "url":"https://aws.amazon.com/solutions/case-studies/aldo-group-case-study/",
             "noFollow": false,
-            "openNewTab": true,
-            "title": "Saiba mais"
+            "openNewTab": true
         }
       }
     },
@@ -164,8 +267,7 @@
           "link":{
             "url":"https://aws.amazon.com/solutions/case-studies/coca-cola-migration/",
             "noFollow": false,
-            "openNewTab": true,
-            "title": "Saiba mais"
+            "openNewTab": true
         }
       } 
     },
@@ -177,8 +279,7 @@
           "link":{
             "url":"https://aws.amazon.com/blogs/startups/how-glossier-leveraged-tech-to-build-a-next-generation-cosmetics-company/",
             "noFollow": false,
-            "openNewTab": true,
-            "title": "Saiba mais"
+            "openNewTab": true
         }
       }
     },
@@ -190,8 +291,7 @@
           "link":{
             "url":"https://aws.amazon.com/solutions/case-studies/Ibotta-marketplace1/",
             "noFollow": false,
-            "openNewTab": true,
-            "title": "Saiba mais"
+            "openNewTab": true
         }
       }
     },
@@ -203,8 +303,7 @@
           "link":{
             "url":"https://aws.amazon.com/solutions/case-studies/netflix/",
             "noFollow": false,
-            "openNewTab": true,
-            "title": "Saiba mais"
+            "openNewTab": true
         }
       }
     },
@@ -216,8 +315,7 @@
           "link":{
             "url":"https://aws.amazon.com/f1/",
             "noFollow": false,
-            "openNewTab": true,
-            "title": "Saiba mais"
+            "openNewTab": true
         }
       }
     },
@@ -229,8 +327,7 @@
           "link":{
             "url":"https://aws.amazon.com/blogs/media/providing-remote-learning-for-millions-of-israel-students-through-live-stream/",
             "noFollow": false,
-            "openNewTab": true,
-            "title": "Saiba mais"
+            "openNewTab": true
         }
       }
     },
@@ -242,8 +339,7 @@
           "link":{
             "url":"https://aws.amazon.com/solutions/case-studies/iflix/",
             "noFollow": false,
-            "openNewTab": true,
-            "title": "Saiba mais"
+            "openNewTab": true
         }
       }
     }  
