--- a/desafioUpMedal/store/blocks/home/home.jsonc
+++ b/desafioUpMedal/store/blocks/home/home.jsonc
@@ -239,7 +239,8 @@
     "props": {
       "autoplay": {
         "timeout": 7000,
-        "stopOnHover": true
+        "stopOnHover": true,
+        "blockClass": "slider-home"
       },
       "itemsPerPage": {
         "mobile": 1
