--- a/desafioUpMedal/manifest.json
+++ b/desafioUpMedal/manifest.json
@@ -48,7 +48,8 @@
     "vtex.add-to-cart-button": "0.x",
     "vtex.product-list": "0.x",
     "hiringcoders202108.leads": "0.x",
-    "vtex.store-link": "0.x"
+    "vtex.store-link": "0.x",
+    "vtex.store-video": "1.x"
   },
   "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
 }
