--- a/desafioUpMedal/store/blocks/search.jsonc
+++ b/desafioUpMedal/store/blocks/search.jsonc
@@ -1,6 +1,6 @@
 {
   "store.search": {
-    "blocks": ["search-result-layout"]
+    "blocks": ["search-result-layout","back-to-top-button"]
   },
   "search-result-layout": {
     "blocks": [
