--- a/componenteReactLeads/manifest.json
+++ b/componenteReactLeads/manifest.json
@@ -14,7 +14,9 @@
     "vtex.styleguide": "9.x",
     "vtex.css-handles": "0.x",
     "vtex.search-graphql": "0.x",
-    "vtex.product-context": "0.x"
+    "vtex.product-context": "0.x",
+    "vtex.store-graphql": "2.x",
+    "vtex.order-placed": "2.x"
   },
   "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
 }
