Adicionado Lead Infocard

--- a/desafioUpMedal/store/blocks/home/home.jsonc
+++ b/desafioUpMedal/store/blocks/home/home.jsonc
@@ -39,7 +39,7 @@
       "isFullModeStyle": true,
       "textPosition": "center",
       "imageUrl": "https://cdn.discordapp.com/attachments/879845281292767262/881967511732625438/bgaws.jpg",
-      "headline": "Cadastre-se para saber mais dos nossos produtos",
+      "headline": "Cadastre-se para saber mais sobre nossos novos produtos",
       "subhead": "Por acaso se você estiver interessado em acompanhar nossos produtos, se inscreva em nossa newsletter e fique por dentro de todas novidades   ",
       "callToActionText": "Cadastre-se aqui!",
       "callToActionUrl": "/sale/d",
