Links dos BG Consertados

--- a/desafioUpMedal/store/blocks/home/home.jsonc
+++ b/desafioUpMedal/store/blocks/home/home.jsonc
@@ -38,7 +38,7 @@
       "id": "info-card-example",
       "isFullModeStyle": true,
       "textPosition": "center",
-      "imageUrl": "https://cdn.discordapp.com/attachments/879845281292767262/881967511732625438/bgaws.jpg",
+      "imageUrl": "https://i.imgur.com/aGzpJNq.jpg",
       "headline": "Cadastre-se para saber mais sobre nossos novos produtos",
       "subhead": "Por acaso se você estiver interessado em acompanhar nossos produtos, se inscreva em nossa newsletter e fique por dentro de todas novidades   ",
       "callToActionText": "Cadastre-se aqui!",
@@ -52,7 +52,7 @@
       "id": "info-card-example",
       "isFullModeStyle": true,
       "textPosition": "center",
-      "imageUrl": "https://cdn.discordapp.com/attachments/879845756310282330/880473022652379186/bg2.png",
+      "imageUrl": "https://i.imgur.com/4mZFxxE.png",
       "headline": "Conheça a plataforma, os produtos de nuvem e os recursos da AWS",
       "callToActionMode": "link",
       "callToActionText": "Comece a usar",
@@ -66,7 +66,7 @@
       "id": "info-card-example",
       "isFullModeStyle": true,
       "textPosition": "center",
-      "imageUrl": "https://cdn.discordapp.com/attachments/879845756310282330/880473025252847616/bg3.jpg",
+      "imageUrl": "https://i.imgur.com/pCqA03r.jpg",
       "headline": "Modernize sua infraestrutura de dados",
       "subhead": "Migre de datastores autogerenciados para serviços da AWS totalmente gerenciados para economizar tempo, custos e melhorar a produtividade",
       "callToActionMode": "link",
@@ -81,7 +81,7 @@
       "id": "info-card-example",
       "isFullModeStyle": true,
       "textPosition": "center",
-      "imageUrl": "https://cdn.discordapp.com/attachments/879845756310282330/880473026301407302/bg4.png",
+      "imageUrl": "https://i.imgur.com/lauZtqx.png",
       "headline": "Hospede aplicativos web estáticos",
       "subhead": "O AWS Amplify oferece um fluxo de trabalho simples baseado em GIT para implantar aplicativos Web estáticos na AWS",
       "callToActionMode": "link",
@@ -96,7 +96,7 @@
       "id": "info-card-example",
       "isFullModeStyle": true,
       "textPosition": "center",
-      "imageUrl": "https://cdn.discordapp.com/attachments/879845756310282330/880473022652379186/bg2.png",
+      "imageUrl": "https://i.imgur.com/4mZFxxE.png",
       "headline": "Conheça a plataforma, os produtos de nuvem e os recursos da AWS",
       "callToActionMode": "link",
       "callToActionText": "Comece a usar",
@@ -288,7 +288,7 @@
       "id": "info-card-example",
       "isFullModeStyle": true,
       "textPosition": "center",
-      "imageUrl": "https://cdn.discordapp.com/attachments/879845756310282330/880473022652379186/bg2.png",
+      "imageUrl": "https://i.imgur.com/4mZFxxE.png",
       "headline": "Conheça a plataforma, os produtos de nuvem e os recursos da AWS",
       "callToActionMode": "link",
       "callToActionText": "Comece a usar",
@@ -302,7 +302,7 @@
       "id": "info-card-example",
       "isFullModeStyle": true,
       "textPosition": "center",
-      "imageUrl": "https://cdn.discordapp.com/attachments/879845756310282330/880473025252847616/bg3.jpg",
+      "imageUrl": "https://i.imgur.com/pCqA03r.jpg",
       "headline": "Modernize sua infraestrutura de dados",
       "subhead": "Migre de datastores autogerenciados para serviços da AWS totalmente gerenciados para economizar tempo, custos e melhorar a produtividade",
       "callToActionMode": "link",
@@ -317,7 +317,7 @@
       "id": "info-card-example",
       "isFullModeStyle": true,
       "textPosition": "center",
-      "imageUrl": "https://cdn.discordapp.com/attachments/879845756310282330/880473026301407302/bg4.png",
+      "imageUrl": "https://i.imgur.com/lauZtqx.png",
       "headline": "Hospede aplicativos web estáticos",
       "subhead": "O AWS Amplify oferece um fluxo de trabalho simples baseado em GIT para implantar aplicativos Web estáticos na AWS",
       "callToActionMode": "link",
