--- a/desafioUpMedal/store/blocks/home/home.jsonc
+++ b/desafioUpMedal/store/blocks/home/home.jsonc
@@ -40,9 +40,9 @@
       "textPosition": "center",
       "imageUrl": "https://cdn.discordapp.com/attachments/879845281292767262/881967511732625438/bgaws.jpg",
       "headline": "Cadastre-se para saber mais sobre nossos novos produtos",
-      "subhead": "Por acaso se você estiver interessado em acompanhar nossos produtos, se inscreva em nossa newsletter e fique por dentro de todas novidades   ",
+      "subhead": "Se estiver interessado em saber mais sobre AWS e tudo mais, cadastre-se em nossa newsletter e fique por dentro deste mundo!",
       "callToActionText": "Cadastre-se aqui!",
-      "callToActionUrl": "/sale/d",
+      "callToActionUrl": "/leads",
       "blockClass": "info-card-example",
       "textAlignment": "center"
     }
