Alteração de banner de leads móvel.

--- a/desafioUpMedal/store/blocks/home/home.jsonc
+++ b/desafioUpMedal/store/blocks/home/home.jsonc
@@ -276,8 +276,8 @@
       "textPosition": "center",
       "imageUrl": "https://i.imgur.com/aGzpJNq.jpg",
       "headline": "Cadastre-se para saber mais sobre nossos novos produtos",
-      "subhead": "Por acaso se você estiver interessado em acompanhar nossos produtos, se inscreva em nossa newsletter e fique por dentro de todas novidades   ",
-      "callToActionText": "Comece a usar gratuitamente",
+      "subhead": "Se estiver interessado em saber mais sobre AWS e tudo mais, cadastre-se em nossa newsletter e fique por dentro deste mundo!",
+      "callToActionText": "Cadastre-se aqui!",
       "callToActionUrl": "/leads",
       "blockClass": "info-card-example",
       "textAlignment": "center"
